# SkeletAlg

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README
logger/: CMakeLists.txt  devices.cpp  devices.h  logger.cpp  logger.h  logger.levels
main/: CMakeLists.txt  compress.cpp  compress.h  constants.cpp  constants.h  dh2operator.cpp  dh2operator.h  functions.cpp  functions.h  linearalgebra.h  main.cpp  meshreader.cpp  meshreader.h  multisurface.cpp  multisurface.h  options.cpp  options.h  orient.cpp  orient.h  spaces.h  surface.cpp  surface.h  surfacehelpers.h  test.cpp  timing.cpp  timing.h  usage.txt
meshfiles/: computemeshsize.py  cubeBalanced.geo  cubeinterface.geo  mesher.sh
python/: config.pyx  logger.pxd  main.py  multisurface.pxd  options.pxd  setup.py  surface.pyx
utils/: arrays.h  cutils.cpp  cutils.h  data.cpp  data.h  enum.h  functionals.h
